# mentor

./: .gitignore  LICENSE  README.md  Untitled.ipynb  plan-agent-update.md  pyproject.toml  spec.md
demo-math/: pyproject.toml
demo-math/demo_math/: data.py  manifest.json  tools.py
mentor/: __init__.py  cli.py  config.py  server.py
mentor/checkpoint/: serializer.py  store.py
mentor/handlers/: agent.py  checkpoint.py  plugin.py  workspace.py
mentor/plugin/: manager.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/Agent/: AgentPanel.tsx  ChatBubble.tsx
web/src/components/Notebook/: CellContextMenu.tsx  CellEditor.tsx  CellOutput.tsx  CheckpointMarker.tsx  CodeCell.tsx  MarkdownCell.tsx  Notebook.tsx
web/src/components/Plugin/: InstallDialog.tsx  PluginDetail.tsx  PluginList.tsx  PluginPanel.tsx
web/src/components/Settings/: SettingsModal.tsx
web/src/components/Toolbar/: FreezeButton.tsx  KernelStatusBar.tsx  MenuBar.tsx  WorkspaceDialog.tsx
web/src/services/: api.ts  ipynb.ts  kernel.ts  markdown.ts
web/src/stores/: chatStore.ts  checkpointStore.ts  kernelStore.ts  notebookStore.ts  pluginStore.ts  settingsStore.ts  workspaceStore.ts
web/src/styles/: global.css
web/src/types/: index.ts
