[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "mentor"
version = "0.2.0"
description = "A minimalist linear-history research notebook with AI agent."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "jupyter_server>=2.0.0",
    "dill>=0.3.7",
]

[project.scripts]
mentor = "mentor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mentor"]

[tool.hatch.build.targets.sdist]
include = [
    "mentor/",
    "web/",
    "pyproject.toml",
    "README.md",
]
